# 3D_Platformer

./: .autotools  .cproject  .project  .travis.yml  LICENCE  Makefile.in  README.md  RPM-GPG-KEY-ilg-2  aclocal.m4  configure  configure.ac  travis.yml
Build (GNU)/: Makefile  config.status  libtool
Build (GNU)/shaders/: Makefile
Build (GNU)/src/: Makefile  shaderexample
Build (GNU)/src/.deps/: CubeAsset.Po  GameAssetManager.Po  GameWorld.Po  main.Po
autom4te.cache/: output.0  output.1  output.2  output.5  output.6  output.7  requests  traces.0  traces.1  traces.2  traces.3  traces.4  traces.5  traces.6  traces.7  traces.8
libltdl/: configure
m4/: boost.m4
shaders/: camera.vs  fragment.fs  fragmentgreen.fs  fragmentred.fs  fragmentshader.fs  rotate.vs  scale.vs  translate.vs
src/: BoundingBox.cc  BoundingBox.h  Camera.cc  Camera.h  CubeAsset.cc  CubeAsset.h  GameAsset.cc  GameAsset.h  GameAssetManager.cc  GameAssetManager.h  GameLoop.cc  GameLoop.h  GameWorld.cc  GameWorld.h  Makefile.am  Makefile.in  PyramidAsset.cc  PyramidAsset.h  PythonBindings.cc  PythonBindings.h  common.h  main.cc
src/.libs/: Makefile.am
src/shaders/: camera.vs
